# aegis

./: .gitignore  Dockerfile.sandbox  README.md  main.py  pyproject.toml
.github/workflows/: pylint.yml
src/aegis/: cli.py
src/aegis/application/: use_cases.py
src/aegis/domain/: exceptions.py  models.py  state.py
src/aegis/infrastructure/adapters/: anthropic_adapter.py  base_scanner.py  docker_sandbox.py  grep_scanner.py  json_reporter.py  local_artifact_adapter.py  semgrep_scanner.py
src/aegis/ports/: artifact.py  llm.py  reporter.py  sandbox.py  scanner.py
tests/: conftest.py
tests/application/: test_use_cases.py
tests/benchmarks/: conftest.py  evaluator.py  loader.py  matching.py  models.py  test_benchmark_dsvw.py  test_evaluator.py  test_matching.py  view_history.py
tests/benchmarks/ground_truth/: dsvw.yaml
tests/domain/: test_models.py  test_state.py
tests/infrastructure/: test_anthropic_adapter.py  test_docker_sandbox.py  test_grep_scanner.py  test_json_reporter.py  test_semgrep_scanner.py
