[project]
name = "aegis"
version = "0.1.0"
description = "AEGIS: Agentic Exploit Generation in Isolated Sandboxes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]